--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
   "twitter_api": {
-    "consumer_key":        "TODO: Set according to https://apps.twitter.com -> create app -> tab 'Keys and Access Tokens' -> Application Settings -> Consumer Key (API Key)",
-    "consumer_secret":     "TODO: Set according to https://apps.twitter.com -> create app -> tab 'Keys and Access Tokens' -> Application Settings -> Consumer Secret (API Secret)",
-    "access_token_key":    "TODO: Set according to https://apps.twitter.com -> create app -> tab 'Keys and Access Tokens' -> Your Access Token -> Access Token",
-    "access_token_secret": "TODO: Set according to https://apps.twitter.com -> create app -> tab 'Keys and Access Tokens' -> Your Access Token -> Access Token Secret"
+    "consumer_key":        "1G9PrirxZCUFUAAvMD3tUoHYH",
+    "consumer_secret":     "Fh7FtqQBQT1DLoNpppqDjemk6mEqhkZgLCm7dVf9aBgS5K1b8F",
+    "access_token_key":    "921444215640481792-3I39rl5Uflz0t77BWqRTRzhOg1ZzrQH",
+    "access_token_secret": "2gcF4eSvfOh3pJdpi0wzWKd0quIjYa4D0uWRcdDzGxxG2"
   },
   "database": {
     "url": "mongodb://... TODO: See http://mongodb.github.io/node-mongodb-native/driver-articles/mongoclient.html#the-url-connection-format",
@@ -12,7 +12,7 @@
   "bot_parameters": {
     "query": "TODO: See 'Query Operators' in https://dev.twitter.com/rest/public/search",
     "lang": "en",
-    "replyOnceEveryXMinutes": 15,
+    "replyOnceEveryXMinutes": 13,
     "replyToTweetsAtLeastXMinutesOld": 5
   }
 }
